fix： 完成loadUserByUsername方法